# ecs-template

./: .envrc  .gitignore  README.md  docker-compose.yml
.github/workflows/: main.yml
backend/: Dockerfile  pyproject.toml
backend/api/: main.py
backend/tests/: test.py  test_demo.py
frontend/: Dockerfile  package.json
frontend/pages/: index.js
