[tool.poetry]
name = "envshare-back"
version = "0.1.0"
description = ""
authors = ["Ryutaro Furutani <ryutaro.furutani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
