[tool.poetry]
name = "envshare-back"
version = "0.1.0"
description = ""
authors = ["Ryutaro Furutani <ryutaro.furutani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
autopep8 = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
SQLAlchemy-Utils = "^0.38.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3